--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
 opencv-python==4.7.0.68
 mediapipe==0.9.0.1
 scikit-learn==1.2.0
+tensorflow==2.16.1
 
 
 
-
-Training :- 
-cd
-source custenv/bin/activate
-cd Desktop/sign-language-detector-python/
